Rancher/rancher-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rancher-gateway
  namespace: cattle-system
  labels:
    io.cilium/gateway: rancher
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "rancher.31.22.104.56.sslip.io"
      tls:
        mode: Terminate
        certificateRefs:
          - name: rancher-gateway-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-route
  namespace: cattle-system
spec:
  parentRefs:
    - name: rancher-gateway
  hostnames:
    - "rancher.31.22.104.56.sslip.io"
  rules:
    - backendRefs:
        - name: rancher
          port: 80
